# autonomous_bot_mobile_robotics

./: .gitignore  ARCHITECTURE.md  README.md  check_gripper.py  run_mapping.sh  test_nav_goal.py
assignment4_recordings/: README.txt
src/: ASSIGNMENT4_PART2_COMPREHENSIVE_GUIDE.md  ASSIGNMENT4_PART2_IMPLEMENTATION_PLAN.md  ASSIGNMENT4_PART2_MUST3R_IMPLEMENTATION_GUIDE.md  CLAUDE.md  assignment4_part2_must3r.md  assignment4_part2_slam.md  frames_2025-11-17_13.59.40.gv  mars.md  mars_gazebo_tutorial.md  must3r_processing_pipeline.md
src/husky_ur3_description/: CMakeLists.txt  package.xml
src/husky_ur3_description/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_rviz.rviz  ros_gz_bridge.yaml  rviz_config.rviz  (+1 more)
src/husky_ur3_slam/: CMakeLists.txt  package.xml
src/must3r_nav/: MARS_WORLD_GUIDE.md  NAV2_USAGE_GUIDE.md  TROUBLESHOOTING.md  package.xml  setup.cfg  setup.py
src/must3r_nav/config/: mars_nav2_params.yaml  must3r_visualization.rviz  navigation_waypoints.yaml
src/must3r_nav/launch/: husky_ur3_must3r.launch.py  mars_complete.launch.py  mars_nav2.launch.py  mars_thanksgiving.launch.py
src/must3r_nav/must3r_nav/: arm_trajectory_bridge.py  demo_pointcloud_node.py  must3r_bridge_node.py  must3r_simple_node.py  must3r_wrapper.py  obstacle_detector_node.py  odom_to_tf_node.py  point_cloud_processor.py  stereo_depth_node.py  temp_map_publisher.py  vision_navigator_node.py  waypoint_navigator_node.py
src/must3r_nav/scripts/: must3r_processor.py  waypoint_navigator.py
src/must3r_nav/worlds/: mars_thanksgiving.world
(+51 files in other folders)
